# nepalikit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: labeler.yml
.github/workflows/: docs.yml  labeler.yml  nepalikit.yml
NepaliKit/: __init__.py  manage_stopwords.py  preprocessing.py  sentence_operation.py
NepaliKit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
NepaliKit/manage_stopwords/: __init__.py
NepaliKit/preprocessing/: TextProcessor.py  __init__.py
NepaliKit/sentence_operation/: __init__.py  extract_sentences.py  replace_abbreviations.py  segment_sentences.py  sentence_stats.py
NepaliKit/test/: test_sentencepiece_tokenizer.py  test_utils.py
NepaliKit/tokenization/: tokenizer.py
NepaliKit/tokenization/sentencepiece/model/: NepaliKit_sentencepiece.vocab
NepaliKit/utils/: __init__.py  utils.py
docs/: changelog.md  contributing.md  future-roadmap.md  index.md  installation.md  quickstart.md
docs/api/: index.md  lemmatizer.md  normalizer.md  number_extractor.md  pos_tagger.md  preprocessing.md  segmentation.md  sentencepiece_training.md  spell_checker.md  stemmer.md  stopwords.md  tokenization.md  transliteration.md  utils.md
docs/examples/: basic_usage.md  complete_pipeline.md  index.md  preeti_to_unicode.md
docs/usage/: index.md  lemmatization.md  normalization.md  number_extraction.md  pos_tagging.md  preprocessing.md  sentence_operations.md  sentencepiece_training.md  spell_checking.md  stemming.md  stopwords.md  tokenization.md  transliteration.md
nepalikit/: __init__.py
nepalikit/data/: lemma_dictionary.json  ner_dictionary.json  pos_dictionary.json  pos_ngram_model.json  spelling_dict.txt  stemmer_rules.json  stopwords.txt
nepalikit/lemmatizer/: __init__.py  lemmatizer.py
nepalikit/manage_stopwords/: __init__.py  manage_stopwords.py
nepalikit/ner/: __init__.py  ner.py
nepalikit/normalizer/: __init__.py  normalizer.py
nepalikit/number_extractor/: __init__.py  number_extractor.py
nepalikit/pos_tagger/: __init__.py  ml_pos_tagger.py  pos_tagger.py
nepalikit/preprocessing/: TextProcessor.py  __init__.py  urls_emails.py
nepalikit/sentence_operation/: __init__.py  extract_sentences.py  load_abbreviation.py  normalize_text.py  replace_abbreviations.py  segment_sentences.py  sentence_stats.py
nepalikit/spell_checker/: __init__.py  spell_checker.py
nepalikit/stemmer/: __init__.py  stemmer.py
nepalikit/tokenization/: __init__.py  sentencepiece_tokenizer.py  tokenizer.py
nepalikit/tokenization/sentencepiece/: train.py
nepalikit/tokenization/sentencepiece/model/: NepaliKit_sentencepiece.model
nepalikit/transliterate/: __init__.py  preeti.py  transliterate.py
nepalikit/utils/: __init__.py  utils.py
test/: test_abbrev_replacer.py  test_abbreviations.py  test_lemmatizer.py  test_ml_pos_tagger.py  test_ner.py  test_normalizer.py  test_number_extractor.py  test_pos_tagger.py  test_sentence_operations.py  test_sentencepiece_tokenizer.py  test_spell_checker.py  test_stemmer.py  test_stopwords.py  test_textpreprocessor.py  test_tokenizer.py  test_transliterate.py  test_utils.py
